# SuperDCA

./: .gitmodules  README.md
SuperDCA/: CMakeLists.txt  LICENSE  README.md  SuperDCA_options.cmake  git_commit_info.cmake
SuperDCA/cmake/: SuperDCA_options.cmake
SuperDCA/include/: Array_view.hpp  Array_view_forward.h  Array_view_iterator.hpp  Array_view_iterator_forward.h  Array_view_operations.hpp  Coupling_matrix_view.hpp  LBFGS.h  LBFGS_interface_CppNumericalSolvers.hpp  Math_utility.hpp  Matrix_kernel_access_order.hpp  Matrix_math.hpp  SIMD_intrinsics.h  Stopwatch.hpp  SuperDCA.h  SuperDCA_commons.h  SuperDCA_options.h  SuperDCA_version.h  Vector.h  Vector_forward.h  Vector_interface.hpp  Vector_operations.hpp  plmDCA.hpp  plmDCA_objective.hpp  plmDCA_optimizer_parameters.hpp  plmDCA_optimizers.hpp  plmDCA_options.h  plmDCA_utility.hpp  vectorized_exp.h
SuperDCA/src/: CMakeLists.txt  SuperDCA.cpp  SuperDCA_commons.cpp  SuperDCA_options.cpp  plmDCA_options.cpp
binaries/SuperDCA_v0.1.0_master-5a5e159/: README.md  SuperDCA
binaries/SuperDCA_v0.1.0_master-7a725f9/: README.md  SuperDCA
binaries/SuperDCA_v0.1.0_master-7a725f9/tbb/tbb44_20160526oss/lib64/: libtbb.so.2
binaries/SuperDCA_v0.1.0_master-be38276/: README.md  SuperDCA
binaries/SuperDCA_v0.1.1_master-84e7342/: README.md  SuperDCA
pneumo_couplings/: maela.94028_SNPs.SuperDCA_couplings.top-776k.7z
ranking_scripts/: LICENSE  phyl.ranking.function.R  readme.txt
